--- a/Bootstrap_Presencial_2/css/stely.css
+++ b/Bootstrap_Presencial_2/css/stely.css
@@ -1,3 +1,15 @@
+*{
+    padding: 0;
+    margin: 0;
+    vertical-align: baseline;
+    list-style: none;
+    border: 0;
+    color: #FFF;
+    font-family: 'Poppins', sans-serif;
+    font-size: 16px;
+    text-decoration: none;
+  }
+
 body{
     background-color: deepskyblue;
 }
@@ -7,14 +19,26 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 
-#img{
-    background-image: url('../imagens/Pexels-Banco-de-Imagens-gratis-Des1gnON.jpg');
-    background-repeat: no-repeat;
-    background-position: center;
-    color: white;
-}
-
-.container > .row {
+.container, .row {
     display: flex;
     flex-wrap: wrap;
+}
+
+.card__video{    
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.card__img{
+    background-image: url(/Bootstrap_Presencial_2/imagens/Pexels-Banco-de-Imagens-gratis-Des1gnON.jpg);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
